@@ -2,7 +2,7 @@ version: "1.0"
 type: navigation-item
 data:
   path: "storage"
-  position: 50
+  position: 40
   text: _("Storage")
   icon: nas
   url: "/storage"
