@@ -2,8 +2,8 @@ version: "1.0"
 type: navigation-item
 data:
   path: "usermgmt"
-  position: 40
-  text: _("User Management")
+  position: 60
+  text: _("Users")
   icon: users
   url: "/usermgmt"
   permissions:
